--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.19.7",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-router": "^5.1.8",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
